<resources>
    <string name="app_name">My New Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chils_rewards">Chils\nrewards</string>
    <string name="points">Points</string>
    <string name="imie">Imie</string>
    <string name="add_child">Add child</string>
    <string name="behaviour">behaviour</string>
    <string name="duties">duties</string>
    <string name="child_name">name</string>
    <string name="repeat_duties">repeat</string>
    <string name="child_assignment">assigned to</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="useraddedit">User Add Edit</string>

</resources>